--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,10 @@ header {
   font-size: 12px;
   transition: 0.3s
 }
-
+.priceSection {
+  flex-direction: row;
+  display: flex;
+}
 .dollarAmount {
   position: absolute;
   top: 75px;
@@ -137,7 +140,16 @@ header {
   font-size: 10px;
   color: #535353;
 }
-
+.logoSection{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.logoVelar{
+  width:60px;
+  height:20px;
+  margin-left:10px
+}
 .switchButton:hover {
   color: white;
   cursor: pointer;
